--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ version: '3'
 services:
   web:
     build: .
-    command: python /code/manage.py runserver 0.0.0.0:8000
-    # command: gunicorn blog_project.wsgi:application --bind 0.0.0.0:8000 --workers 4
+    # command: python /code/manage.py runserver 0.0.0.0:8000
+    command: gunicorn blog_project.wsgi:application --bind 0.0.0.0:8000 --workers 4
     volumes:
       - .:/code
     ports:
@@ -15,8 +15,8 @@ services:
   db:
    image: postgres:11
    environment:
-     - POSTGRES_DB=postgres
-     - POSTGRES_USER=postgres
+    #  - POSTGRES_DB=postgres
+    #  - POSTGRES_USER=postgres
      - POSTGRES_PASSWORD=postgres
    volumes:
        - postgres_data:/var/lib/postgresql/data/
