--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ django-cors-headers==3.5.0
 django-environ==0.4.5
 djangorestframework==3.11.1
 djangorestframework-simplejwt==4.4.0
+gunicorn==20.0.4
 environ==1.0
 psycopg2-binary==2.8.6
 pyjwt==1.7.1
